infra/k8s/base/background-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: background-worker
  labels:
    app: background-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: background-worker
  template:
    metadata:
      labels:
        app: background-worker
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/background-worker:latest
          name: background-worker
