infra/k8s/base/import-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: import-worker
  labels:
    app: import-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: import-worker
  template:
    metadata:
      labels:
        app: import-worker
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/import-worker:latest
          name: import-worker
