infra/k8s/base/probe-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-worker
  labels:
    app: probe-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: probe-worker
  template:
    metadata:
      labels:
        app: probe-worker
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/probe-worker:latest
          name: probe-worker
