infra/k8s/base/process-upload-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: $NAMESPACE
  name: process-upload-worker
  labels:
    app: process-upload-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: process-upload-worker
  template:
    metadata:
      labels:
        app: process-upload-worker
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/process-upload-worker:latest
          name: process-upload-worker
