infra/k8s/base/transcode-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcode-worker
  labels:
    app: transcode-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: transcode-worker
  template:
    metadata:
      labels:
        app: transcode-worker
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/transcode-worker:latest
          name: transcode-worker
          resources:
            requests:
              memory: 5Gi
