infra/k8s/base/transcribe-worker-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcribe-worker
  labels:
    app: transcribe-worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: transcribe-worker
  template:
    metadata:
      labels:
        app: transcribe-worker
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/transcribe-worker:latest
          name: transcribe-worker
