infra/k8s/base/axiom-syslog-proxy-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axiom-syslog-proxy
  labels:
    app: axiom-syslog-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axiom-syslog-proxy
  template:
    metadata:
      labels:
        app: axiom-syslog-proxy
    spec:
      restartPolicy: Always
      containers:
        - image: axiomhq/axiom-syslog-proxy:0.7.2
          name: axiom-syslog-proxy
          ports:
            - name: syslog-tcp
              containerPort: 601
            - name: syslog-udp
              containerPort: 514
---
apiVersion: v1
kind: Service
metadata:
  name: axiom-syslog-proxy
spec:
  selector:
    app: axiom-syslog-proxy
  type: ClusterIP
  ports:
    - name: syslog-tcp
      protocol: TCP
      port: 601
      targetPort: 601
    - name: syslog-udp
      protocol: UDP
      port: 514
      targetPort: 514
