infra/k8s/base/elasticsearch-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      restartPolicy: Always
      containers:
        - &elasticsearchContainer
          image: elasticsearch:8.5.2
          name: elasticsearch
          ports:
            - containerPort: 9200
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: esdata
      volumes:
        - name: esdata
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: elasticsearch
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
