infra/k8s/base/gateway-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      restartPolicy: Always
      containers:
        - &gatewayContainer
          image: registry.gitlab.com/letschurch/lets.church/gateway:latest
          name: gateway
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
