infra/k8s/base/kibana-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      restartPolicy: Always
      containers:
        - image: kibana:8.12.0
          name: kibana
          ports:
            - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: kibana
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5601
