infra/k8s/base/metabase-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      restartPolicy: Always
      containers:
        - image: metabase/metabase:v0.51.3.6
          name: metabase
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: metabase
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
