infra/k8s/base/pgweb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
  labels:
    app: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      restartPolicy: Always
      containers:
        - image: sosedoff/pgweb:0.14.2
          name: pgweb
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: pgweb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
