infra/k8s/base/imgproxy-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
  labels:
    app: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      restartPolicy: Always
      containers:
        - image: darthsim/imgproxy:v3.21.0
          name: imgproxy
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
spec:
  selector:
    app: imgproxy
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imgproxy-funnel
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: imgproxy
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - imgproxy-funnel
