infra/k8s/base/temporal-ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui
  labels:
    app: temporal-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui
  template:
    metadata:
      labels:
        app: temporal-ui
    spec:
      restartPolicy: Always
      containers:
        - image: temporalio/ui:2.22.2
          name: temporal-ui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
spec:
  selector:
    app: temporal-ui
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-ui
spec:
  defaultBackend:
    service:
      name: temporal-ui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - temporal-ui
