infra/k8s/base/web-next-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-next
  labels:
    app: web-next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-next
  template:
    metadata:
      labels:
        app: web-next
    spec:
      restartPolicy: Always
      containers:
        - image: registry.gitlab.com/letschurch/lets.church/web-next:latest
          name: web-next
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-next
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: web-next
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-next-funnel
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: web-next
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - web-next-funnel
